2013-11-13  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* index.php: Fixed a little error.

2013-11-13  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* operation/leads/lead_detail.php: Added massive
	operations to the lead list (assign, close and delete).
	
	* extras/migrate.sql, integria_db.sql: Changes on the
	table `tuser_report`.
	
	* godmode/setup/setup_mail.php: Fixed an error on the
	pending emails table.
	
	* include/functions_db.php: Added the functions
	"get_user_report_types" and "get_user_report_type".
	
	* operation/incidents/incident_dashboard.php: Fixed an
	error that caused the custom searches of leads appear
	with the incident custom searches.
	
	* operation/incidents/incident_search_logic.php,
	  include/functions_incidents.php: Now is possible to
	  select all the checkboxes of the incident list by
	  clicking the checkbox that appear on the title.
	  
	* operation/leads/lead_statistics.php,
	  operation/reporting/incidents_html.php: Now is
	  possible to filter the items with the custom search id
	  passed as parameter.

2013-11-11  Dario Rodriguez <dario@artica.es>

	* images/groups_small: Replaced icons with
	new style.

2013-11-11  Dario Rodriguez <dario@artica.es>

	* operation/projects/project_report.php,
	operation/projects/project_detail.php: Created a new
	report for projects, this is the first version and
	needs a lot of improvements.

2013-11-11  Dario Rodriguez <dario@artica.es>

	* images/products/*
	images/objects/*: Replaced icons with new style.

2013-11-11  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* godmode/setup/offline_update.php: Fixed some errors.

	* include/functions_incidents.php: Now the incidents can
	be sorted by priority.

	* operation/incidents/incident_search_logic.php: Fixed an
	input. Improved the javascript function "changeIncidentOrder".

	* operation/search.php: Now the global search shows the
	invoices.

	* operation/leads/lead_detail.php: Fixed an input.
